# itis-PJC

./: .gitignore  CMakeLists.txt  README.md
LABO01/: main.cpp
LABO02/: main.cpp
LABO03/: zad01.cpp  zad02.cpp  zad03.cpp  zad04.cpp
LABO04/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
LABO05/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
LABO06/: zad01.cpp  zad02.cpp  zad03.cpp  zad04.cpp
UTRW01/: main.cpp
WEJ01/: main.cpp
WEJ02/: main.cpp
WEJ03/: main.cpp
WEJ04/: main.cpp
WEJ05/: main.cpp
