cmake_minimum_required(VERSION 3.25)
project(PJC)

set(CMAKE_CXX_STANDARD 20)

add_executable(LABO01 LABO01/main.cpp LABO03/zad04.cpp)
add_executable(LABO02 LABO02/main.cpp)
add_executable(LABO03ZAD01 LABO03/zad01.cpp)
add_executable(LABO03ZAD02 LABO03/zad02.cpp)
add_executable(LABO03ZAD03 LABO03/zad03.cpp)
add_executable(LABO03ZAD04 LABO03/zad04.cpp)
add_executable(LABO04ZAD01 LABO04/zad1.cpp)
add_executable(LABO04ZAD02 LABO04/zad2.cpp)
add_executable(LABO04ZAD03 LABO04/zad3.cpp)
add_executable(LABO04ZAD04 LABO04/zad4.cpp)
add_executable(LABO04ZAD05 LABO04/zad5.cpp)
add_executable(LABO04ZAD06 LABO04/zad6.cpp)
add_executable(LABO04ZAD07 LABO04/zad7.cpp)
add_executable(LABO04ZAD08 LABO04/zad8.cpp)
add_executable(LABO05ZAD01 LABO05/zad1.cpp)
add_executable(LABO05ZAD02 LABO05/zad2.cpp)
add_executable(LABO05ZAD03 LABO05/zad3.cpp)
add_executable(LABO05ZAD04 LABO05/zad4.cpp)
add_executable(LABO05ZAD05 LABO05/zad5.cpp)
add_executable(LABO05ZAD06 LABO05/zad6.cpp)
add_executable(LABO05ZAD07 LABO05/zad7.cpp)
add_executable(LABO05ZAD08 LABO05/zad8.cpp)
add_executable(LABO05ZAD09 LABO05/zad9.cpp)
add_executable(LABO06ZAD01 LABO06/zad01.cpp)
add_executable(LABO06ZAD02 LABO06/zad02.cpp)
add_executable(LABO06ZAD03 LABO06/zad03.cpp)
add_executable(LABO06ZAD04 LABO06/zad04.cpp)
add_executable(UTRW01 UTRW01/main.cpp)
add_executable(WEJ01 WEJ01/main.cpp)
add_executable(WEJ02 WEJ02/main.cpp)
add_executable(WEJ03 WEJ03/main.cpp)
add_executable(WEJ04 WEJ04/main.cpp)
add_executable(WEJ05 WEJ05/main.cpp)